# SimpleRay

./: .gitignore  CMakeLists.txt
src/: main.cpp
